Added Readme And Fixed Bugs

--- a/Contact-Us-Form-English/assets/css/loginAdmin.css
+++ b/Contact-Us-Form-English/assets/css/loginAdmin.css
@@ -170,6 +170,12 @@ label {
     outline: none;
 }
 
+@media screen and (max-width: 576px) {
+    .login-btm {
+        font-size: 1.9vw!important;
+    }
+}
+
 /* 
 Developed by Hero Expert 
 Telegram channel: @HeroExpert_ir
