--- a/Contact-Us-Form-English/assets/css/panelAdmin.css
+++ b/Contact-Us-Form-English/assets/css/panelAdmin.css
@@ -355,6 +355,15 @@ tbody th {
     .page-link {
         font-size: 1.5vw !important;
     }
+    .HeroExpert span {
+        font-size: 2vw;
+    }
+    .message {
+        width: 90%;
+    }
+    .close{
+        padding: 1vh 2vw;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -365,6 +374,15 @@ tbody th {
     .view-btn,
     .page-link {
         font-size: 2vw !important;
+    }
+    .HeroExpert span {
+        font-size: 2.5vw;
+    }
+    .message {
+        font-size: 1.8vw;
+    }
+    .close{
+        font-size: 2vw;
     }
 }
 
